--- a/apps/docs/src/content/once-ui/components/badge.mdx
+++ b/apps/docs/src/content/once-ui/components/badge.mdx
@@ -136,7 +136,7 @@ Badges can contain custom content using children instead of the `title` prop.
   marginTop="16"
   marginBottom="24"
   preview={
-    <Badge id="badge-6" paddingY="4" paddingLeft="4" paddingRight="8" gap="12" textVariant="label-default-s" border="neutral-medium" background="neutral-alpha-weak">
+    <Badge id="badge-6" paddingY="4" paddingLeft="4" paddingRight="16" radius="m" gap="12" textVariant="label-default-s" border="neutral-medium" background="neutral-alpha-weak">
       <Tag>New</Tag>
       Custom content
     </Badge>
@@ -144,7 +144,7 @@ Badges can contain custom content using children instead of the `title` prop.
   codes={[
     {
       code:
-`<Badge id="badge-6" paddingY="4" paddingLeft="4" paddingRight="8" gap="12" textVariant="label-default-s" border="neutral-medium" background="neutral-alpha-weak">
+`<Badge id="badge-6" paddingY="4" paddingLeft="4" paddingRight="16" radius="m" gap="12" textVariant="label-default-s" border="neutral-medium" background="neutral-alpha-weak">
     <Tag>New</Tag>
     Custom content
 </Badge>`,
