--- a/apps/docs/src/content/once-ui/contexts/layoutProvider.mdx
+++ b/apps/docs/src/content/once-ui/contexts/layoutProvider.mdx
@@ -6,7 +6,7 @@ docs: "once-ui/contexts/layoutProvider.mdx"
 github: "contexts/LayoutProvider.tsx"
 navLabel: "LayoutProvider"
 navIcon: "chip"
-navTag: "new"
+navTag: "New"
 navTagVariant: "cyan"
 ---
 
