--- a/apps/docs/src/content/once-ui/effects/countFx.mdx
+++ b/apps/docs/src/content/once-ui/effects/countFx.mdx
@@ -6,7 +6,7 @@ docs: "once-ui/effects/countFx.mdx"
 github: "components/CountFx.tsx"
 navLabel: "CountFx"
 navIcon: "sparkle"
-navTag: "new"
+navTag: "New"
 navTagVariant: "cyan"
 ---
 
