--- a/apps/docs/src/content/once-ui/quick-start.mdx
+++ b/apps/docs/src/content/once-ui/quick-start.mdx
@@ -19,7 +19,7 @@ Once UI is licensed under the MIT license.
 
 Create a new Once UI app with our starter repository. It will install dependencies and set up the recommended structure:
 
-<CodeBlock compact marginBottom="16"
+<CodeBlock marginBottom="16"
 codes={[
   {
     code: "npx create-once-ui-app@latest my-app",
