--- a/apps/docs/src/content/once-ui/modules/codeBlock.mdx
+++ b/apps/docs/src/content/once-ui/modules/codeBlock.mdx
@@ -296,7 +296,7 @@ for (let i = 0; i < items.length; i++) {
 	
 return total;
 }",
-				language: "javascript",
+				language: "tsx",
 				highlight: "2,4-6",
 				label: "Highlight"
 			}
