--- a/apps/docs/src/content/once-ui/config.mdx
+++ b/apps/docs/src/content/once-ui/config.mdx
@@ -88,17 +88,19 @@ export default async function RootLayout({ children }: RootLayoutProps) {
               }}
             />
           </head>
-          <ThemeProvider>
-            <DataThemeProvider>
-              <ToastProvider>
-                <IconProvider>
-                  <Column background="page" as="body" fillWidth margin="0" padding="0" style={{ minHeight: "100vh" }}>
-                    {children}
-                  </Column>
-                </IconProvider>
-              </ToastProvider>
-            </DataThemeProvider>
-          </ThemeProvider>
+          <LayoutProvider>
+            <ThemeProvider>
+              <DataThemeProvider>
+                <ToastProvider>
+                  <IconProvider>
+                    <Column background="page" as="body" fillWidth margin="0" padding="0" style={{ minHeight: "100vh" }}>
+                      {children}
+                    </Column>
+                  </IconProvider>
+                </ToastProvider>
+              </DataThemeProvider>
+            </ThemeProvider>
+          </LayoutProvider>
         </Column>
       </>
     );
