--- a/apps/docs/src/content/get-started.mdx
+++ b/apps/docs/src/content/get-started.mdx
@@ -18,85 +18,4 @@ Our core product is Once UI, an open-source design system built to fuel the next
 
 Since our templates are not just static page examples, but functional, production-ready apps, there are a few things you need to know. Please read the documentation for more details, and if you need further help, reach out on [Discord](https://discord.com/invite/5EyAQ4eNdS).
 
-<Grid fillWidth columns="2" m={{columns: 1}} gap="12" marginTop="16">
-    {[
-      {
-        title: "Once UI Core",
-        description: "Build with an open-source design system",
-        image: "/images/docs/once-ui.jpg",
-        href: "/once-ui/quick-start"
-      },
-      {
-        title: "Magic Portfolio",
-        description: "Showcase your work with a beautiful portfolio template",
-        image: "/images/docs/magic-portfolio.jpg",
-        href: "/magic-portfolio/quick-start"
-      },
-      {
-        title: "Magic Docs",
-        description: "Create beautiful documentations like this one",
-        image: "/images/docs/magic-docs.jpg",
-        href: "/magic-docs/quick-start"
-      },
-      {
-        title: "Magic Store",
-        description: "Start selling merch with a ready-made storefront",
-        image: "/images/docs/magic-store.jpg",
-        href: "/magic-store/quick-start"
-      },
-      {
-        title: "Magic Convert",
-        description: "Launch your conversion-optimized landing page",
-        image: "/images/docs/magic-convert.jpg",
-        href: "/magic-convert/quick-start"
-      },
-      {
-        title: "Magic Agent",
-        description: "Build your chatbot with the Vercel AI SDK",
-        image: "/images/docs/magic-agent.jpg",
-        href: "/magic-agent/quick-start"
-      },
-      {
-        title: "Magic Bio",
-        description: "Launch a modern link-in-bio page",
-        image: "/images/docs/magic-bio.jpg",
-        href: "/magic-bio/quick-start"
-      }
-    ].map((template, index) => (
-      <Card
-        key={index}
-        href={template.href}
-        fillWidth
-        radius="l"
-        border="neutral-alpha-medium"
-        direction="column"
-      >
-        <Row paddingX="20" paddingY="12" gap="12" vertical="center">
-        <Avatar style={{background: "black"}} src="/trademark/icon-dark.svg" size="s" />
-        <Text variant="label-default-s">Once UI</Text>
-        </Row>
-        <Media
-          border="neutral-alpha-medium"
-          src={template.image} 
-          aspectRatio="16/9" 
-          radius="l" 
-          sizes="400px" 
-        />
-        <Column fillWidth padding="20" gap="4" horizontal="start">
-          <Text 
-            variant="heading-default-xs" 
-            onBackground="neutral-strong"
-          >
-            {template.title}
-          </Text>
-          <Text 
-            variant="body-default-s" 
-            onBackground="neutral-weak"
-            wrap="balance"
-          >
-            {template.description}
-          </Text>
-        </Column>
-      </Card>
-    ))}
-  </Grid>
+<Products />
