--- a/apps/docs/src/content/vibe-coding.mdx
+++ b/apps/docs/src/content/vibe-coding.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Vibe Coding"
+title: "Vibe Coding (MCP)"
 updatedAt: "2025-06-03"
 summary: "Once UI is an agent-first AI design system that empowers indie creators to build responsive, high-quality apps effortlessly."
 image: "/images/docs/vibe-coding-dark.jpg"
@@ -31,7 +31,7 @@ As you build more with Once UI, AI models will learn your patterns and start sug
 
 ## MCP Server
 
-Agents can pull Once UI documentation through [Context7’s MCP server](https://context7.com/once-ui-system/docs), supported in editors like Windsurf and Cursor.
+Agents can pull Once UI documentation through [Context7’s MCP server](https://context7.com/once-ui-system/core), supported in editors like Windsurf and Cursor.
 
 To configure it:
 
