docs: content updates

--- a/apps/docs/src/content/magic-docs/changelog.mdx
+++ b/apps/docs/src/content/magic-docs/changelog.mdx
@@ -45,6 +45,6 @@ Keep your customers informed with the latest updates and changes to your product
     }
 ];`, 
     language: "tsx",
-    label: "src/app/resources/changelog.js"
+    label: "src/resources/changelog.js"
   }
 ]} />
