--- a/apps/docs/src/content/magic-docs/roadmap.mdx
+++ b/apps/docs/src/content/magic-docs/roadmap.mdx
@@ -69,7 +69,7 @@ Keep your customers informed about the features and updates you plan to add to y
     }
 ];`, 
     language: "tsx",
-    label: "src/app/resources/roadmap.js"
+    label: "src/resources/roadmap.js"
   }
 ]} />
 
@@ -109,6 +109,6 @@ You can change the available task types in the `task` object in the `roadmap.js`
     }
 };`, 
     language: "tsx",
-    label: "src/app/resources/roadmap.js"
+    label: "src/resources/roadmap.js"
   }
 ]} />
