--- a/apps/docs/src/content/once-ui/data/setup.mdx
+++ b/apps/docs/src/content/once-ui/data/setup.mdx
@@ -61,7 +61,7 @@ The Once UI data-viz module is a collection of opinionated chart solutions built
 
 ## Config
 
-The default settings for the data viz module are stored in the `src/app/resources/data.config.js` file. You can use it to define the default height, highlight color, data mode and variant.
+The default settings for the data viz module are stored in the `src/resources/data.config.js` file. You can use it to define the default height, highlight color, data mode and variant.
 
 <CodeBlock
   marginTop="16"
